<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.petr.testing.FirstActivity">

    <!-- Username label-->
    <!--<TextView-->
        <!--android:id="@+id/userLabel"-->
        <!--android:layout_width="55dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="60dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginStart="20dp"-->
        <!--android:text="@string/userLabel"-->
        <!--android:background="@drawable/label_bkg"-->
        <!--android:ems="10"-->
        <!--android:padding="5dp"-->
        <!--android:textColor="#ffffff"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--/>-->

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/fist"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginTB"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!-- User input -->
    <EditText
        android:id="@+id/loginTB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_border"
        android:ems="12"
        android:gravity="center"
        android:hint="@string/usr_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage"
        app:layout_constraintBottom_toTopOf="@+id/passwordTB"
        app:layout_constraintRight_toRightOf="parent"
        />

    <!-- Password label-->
    <!--<TextView-->
        <!--android:id="@+id/passwordLabel"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginStart="20dp"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:text="@string/passLabel"-->
        <!--android:background="@drawable/label_bkg"-->
        <!--android:ems="10"-->
        <!--android:padding="5dp"-->
        <!--android:textColor="#ffffff"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/loginTB"-->
        <!--/>-->

    <!-- Password input -->
    <EditText
        android:id="@+id/passwordTB"
        android:hint="@string/pswd_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:gravity="center"
        android:inputType="textPassword"
        android:background="@drawable/edittext_border"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/loginTB"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <!-- Sign In button -->
    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="singInUsers"
        android:text="@string/button_sign_in"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
    />

    <!-- Sign up button -->
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="signUpUsers"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="214dp"
        android:text="@string/button_sign_up"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
    />
</android.support.constraint.ConstraintLayout>
