<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.petr.testing.DisplayMessageActivity">

     <!-- Calendar -->
    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:hint="@string/calendar"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:background="@drawable/edittext_border"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <!-- Text -->
    <EditText
        android:id="@+id/reportText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minLines="6"
        android:maxLines="10"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:scrollbars="vertical"
        android:gravity="top|start"
        android:hint="@string/description"
        android:background="@drawable/edittext_border"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <!-- Smiles -->

    <!-- Float button oval-->
    <ImageButton
        android:contentDescription="@string/button_description"
        android:id="@+id/sendReport"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/oval"
        android:onClick="sendReport"
        android:src="@drawable/checked"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
    />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="39dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportText">

        <!-- Happy -->
        <RadioButton
            android:id="@+id/happySmile"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:padding="1dp"
            android:button="@null"
            android:drawableTop="@drawable/happy_sel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <!-- Normal -->
        <RadioButton
            android:id="@+id/normalSmile"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:padding="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:button="@null"
            android:drawableTop="@drawable/confused_sel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/happySmile" />

        <!-- Sad -->
        <RadioButton
            android:id="@+id/sadSmile"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:padding="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:button="@null"
            android:drawableTop="@drawable/mad_sel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/normalSmile" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
